--- a/Form index.html
+++ b/Form index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>From Produk</title>
+  <title>From Tambah Data Pembeli</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   
@@ -22,11 +22,11 @@
     </div>
       <div class="mb-3">
       <label class="form-label">Alamat</label>
-      <input type="text" class="form-control" id="input-harga">
+      <input type="text" class="form-control" id="input-alamat">
     </div>
       <div class="mb-3">
       <label class="form-label">Notlpon</label>
-      <input type="text" class="form-control" id="input-stok">
+      <input type="text" class="form-control" id="input-notlpon">
     </div>
     <button type="submit" class="btn btn-primary" id="tombol-tambah">Simpan</button>
   </form>
@@ -37,13 +37,13 @@
   import { tambahProduk } from './main.js';
   
   let tombolTambah = document.getElementById('tombol-tambah');
-  let elemenNamaProduk = document.getElementById('input-nama');
-  let elemenHarga = document.getElementById('input-harga');
-  let elemenStok = document.getElementById('input-stok');
+  let elemenNamaPembeli = document.getElementById('input-nama');
+  let elemenAlamat = document.getElementById('input-alamat');
+  let elemenNotlpon = document.getElementById('input-notlpon');
   
   tombolTambah.addEventListener('click' , async function (e) {
     e.preventDefault();
-    await tambahProduk(elemenNamaProduk.value, elemenHarga.value, elemenStok.value);
+    await tambahProduk(elemenNamaPembeli.value, elemenAlamat.value, elemenNotlpon.value);
     window.location.href = 'index.html';
   });
  </script>
