--- a/Form index.html
+++ b/Form index.html
@@ -34,7 +34,7 @@
  <a href="index.html">Lihat Data Pembeli</a>
  
  <script type="module">
-  import { tambahProduk } from './main.js';
+  import { tambahPembeli } from './main.js';
   
   let tombolTambah = document.getElementById('tombol-tambah');
   let elemenNamaPembeli = document.getElementById('input-nama');
@@ -43,7 +43,7 @@
   
   tombolTambah.addEventListener('click' , async function (e) {
     e.preventDefault();
-    await tambahProduk(elemenNamaPembeli.value, elemenAlamat.value, elemenNotlpon.value);
+    await tambahPembeli(elemenNamaPembeli.value, elemenAlamat.value, elemenNotlpon.value);
     window.location.href = 'index.html';
   });
  </script>
