--- a/Form index.html
+++ b/Form index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>From Tambah Data Pembeli</title>
+  <title>Form Tambah Data Pembeli</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   
@@ -13,7 +13,7 @@
 </head>
 
 <body class="mb-3">
- <h1>From Data Pembeli</h1>
+ <h1>Form Data Pembeli</h1>
  
  <form class="mb-3">
     <div class="mb-3">
@@ -31,7 +31,7 @@
     <button type="submit" class="btn btn-primary" id="tombol-tambah">Simpan</button>
   </form>
  
- <a href="index.html">Lihat Data Pembeli</a>
+ <a href="index.html">Lihat Daftar Pembeli</a>
  
  <script type="module">
   import { tambahPembeli } from './main.js';
