--- a/Form index.html
+++ b/Form index.html
@@ -25,7 +25,7 @@
       <input type="text" class="form-control" id="input-alamat">
     </div>
       <div class="mb-3">
-      <label class="form-label">Notlpon</label>
+      <label class="form-label">NoTlpon</label>
       <input type="text" class="form-control" id="input-notlpon">
     </div>
     <button type="submit" class="btn btn-primary" id="tombol-tambah">Simpan</button>
